--- a/practice/ScratchRNN.ipynb
+++ b/practice/ScratchRNN.ipynb
@@ -366,18 +366,139 @@
     "**注意事项：**\n",
     "\n",
     "1. 对序列化的训练数据的不同采样方法（随机采样和顺序分区）将导致隐状态初始化的差异。\n",
-    "1. 我们在更新模型参数之前裁剪梯度。\n",
-    "   这样的操作的目的是，即使训练过程中某个点上发生了梯度爆炸，也能保证模型不会发散。\n",
-    "1. 我们用困惑度来评价模型。如 :numref:`subsec_perplexity`所述，\n",
-    "   这样的度量确保了不同长度的序列具有可比性。"
+    "1. 我们在**更新模型参数**之前裁剪梯度。这样的操作的目的是，即使训练过程中某个点上发生了梯度爆炸，也能保证模型不会发散。\n",
+    "1. 我们用困惑度来评价模型。这样的度量确保了不同长度的序列具有可比性。\n",
+    "\n",
+    "**困惑度：**$$ exp\\left(-\\frac{1}{n} \\sum_{t=1}^{n}logP(x_t|x_{t-1}, \\ldots, x_1)\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d913fd01",
+   "metadata": {},
+   "source": [
+    "具体来说，当使用顺序分区(`use_random_iter = False`)时，\n",
+    "我们只在每个迭代周期的开始位置初始化隐状态。\n",
+    "由于下一个小批量数据中的第$i$个子序列样本\n",
+    "与当前第$i$个子序列样本相邻，\n",
+    "因此当前小批量数据最后一个样本的隐状态，\n",
+    "将用于初始化下一个小批量数据第一个样本的隐状态。\n",
+    "这样，存储在隐状态中的序列的历史信息\n",
+    "可以在一个迭代周期内流经相邻的子序列。\n",
+    "然而，在任何一点隐状态的计算，\n",
+    "都依赖于同一迭代周期中前面所有的小批量数据，\n",
+    "这使得梯度计算变得复杂。\n",
+    "为了降低计算量，在处理任何一个小批量数据之前，\n",
+    "我们先分离梯度，使得隐状态的梯度计算总是限制在一个小批量数据的时间步内。\n",
+    "\n",
+    "当使用随机抽样(`use_random_iter = True`)时，因为每个样本都是在一个随机位置抽样的，\n",
+    "因此需要为每个迭代周期重新初始化隐状态。\n",
+    "`updater`是更新模型参数的常用函数。\n",
+    "它既可以是从头开始实现的`d2l.sgd`函数，\n",
+    "也可以是深度学习框架中内置的优化函数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fac33c0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch_chapter8(net, train_iter, loss, updater, device, use_random_iter):\n",
+    "    state, timer = None, d2l.Timer()\n",
+    "    metric = d2l.Accumulator(2)  # 训练损 失之和，token数量\n",
+    "    for X, Y in train_iter:\n",
+    "        if state is None or use_random_iter:\n",
+    "            # 如使用随机迭代，需要在每个小批量更新前初始化隐藏状态\n",
+    "            state = net.begin_state(batch_size=X.shape[0], device=device)\n",
+    "        else:\n",
+    "            if isinstance(net, nn.Module) and not isinstance(state, tuple):\n",
+    "                # 如使用相邻批量采样，且模型为PyTorch模型，需将隐藏状态从计算图分离\n",
+    "                state.detach_()\n",
+    "            else:\n",
+    "                # 使用相邻批量采样，且模型为自定义的模型(返回的类型为元组)\n",
+    "                for s in state:\n",
+    "                    s.detach_()\n",
+    "        y = Y.T.reshape(-1)  # 转置后把time-step放到axis=0的位置上方便后续的遍历，然后拉直成一个向量\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "        y_hat, state = net(X, state)\n",
+    "        l = loss(y_hat, y.long()).mean()  # y和y_hat都是拉直的向量，所以这里的loss计算方式跟MLP一样\n",
+    "        if isinstance(updater, torch.optim.Optimizer):\n",
+    "            updater.zero_grad()\n",
+    "            l.backward()\n",
+    "            grad_clipping(net, 1)\n",
+    "            updater.step()\n",
+    "        else:\n",
+    "            l.backward()\n",
+    "            grad_clipping(net, 1)\n",
+    "            # 因为已经调用了mean函数\n",
+    "            updater(batch_size=1)\n",
+    "\n",
+    "        metric.add(l * y.numel(), y.numel())\n",
+    "        # mertric[0]是损失之和，metric[1]是token数量,二者相除就是交叉熵损失\n",
+    "    return math.exp(metric[0] / metric[1]), metric[1] / timer.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "909d02ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_chapter8(\n",
+    "    net, train_iter, vocab, lr, num_epochs, device, use_random_iter=False\n",
+    "):\n",
+    "    loss = nn.CrossEntropyLoss()\n",
+    "    animator = d2l.Animator(\n",
+    "        xlabel=\"epoch\", ylabel=\"perplexity\", legend=[\"train\"], xlim=[10, num_epochs]\n",
+    "    )\n",
+    "    # 初始化更新函数\n",
+    "    if isinstance(net, nn.Module):\n",
+    "        updater = torch.optim.SGD(net.parameters(), lr)\n",
+    "    else:\n",
+    "        updater = lambda batch_size: d2l.sgd(net.params, lr, batch_size)\n",
+    "    # 定义预测函数\n",
+    "    predict = lambda prefix: predict_chapter8(prefix, 50, net, vocab, device)\n",
+    "    # 训练模型\n",
+    "    for epoch in range(num_epochs):\n",
+    "        perplexity, speed = train_epoch_chapter8(\n",
+    "            net, train_iter, loss, updater, device, use_random_iter\n",
+    "        )\n",
+    "        if (epoch + 1) % 10 == 0:\n",
+    "            print(predict(\"time traveller\"))\n",
+    "            animator.add(epoch + 1, [perplexity])\n",
+    "    print(f'困惑度 {perplexity:.1f}, {speed:.1f} tokens/秒 {str(device)}')\n",
+    "    print(predict(\"time traveller\"))\n",
+    "    print(predict(\"traveller\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1951bd0",
+   "metadata": {},
+   "source": [
+    "# 开始训练"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68a1fec9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs, lr = 500, 1\n",
+    "train_chapter8(net, train_iter, vocab, lr, num_epochs, d2l.try_gpu())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d2l:Python",
+   "display_name": "d2l",
    "language": "python",
-   "name": "conda-env-d2l-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
